Fix header on mobile

--- a/common.css
+++ b/common.css
@@ -11,7 +11,6 @@ html {
 }
 
 #heading {
-  height: 37.5vw;
   background-color: #f0f0f0;
 }
 
@@ -90,6 +89,9 @@ html {
 }
 
 @media (orientation: landscape) {
+  #heading {
+    height: 37.5vw;
+  }
   #headimg {
     width: 75%;
   }
